--- a/math5620.md
+++ b/math5620.md
@@ -2,6 +2,12 @@
 ### Links  
 #### Tasksheets  
 [Tasksheet 1](https://gftbs.github.io/math5620/Homework/TS1)  
+[Tasksheet 2](https://gftbs.github.io/math5620/Homework/TS2)  
+[Tasksheet 3](https://gftbs.github.io/math5620/Homework/TS3)  
+[Tasksheet 4](https://gftbs.github.io/math5620/Homework/TS4)  
+[Tasksheet 5](https://gftbs.github.io/math5620/Homework/TS5)  
+[Tasksheet 6](https://gftbs.github.io/math5620/Homework/TS6)  
+[Tasksheet 7](https://gftbs.github.io/math5620/Homework/TS7)  
 
 #### Software Manual  
 [Software Manual](https://gftbs.github.io/math5620/Software_Manual/toc)  
